--- a/rules.conf
+++ b/rules.conf
@@ -8816,6 +8816,7 @@ DOMAIN-SUFFIX,alipcsec.com,DIRECT
 DOMAIN-SUFFIX,alitrip.com,DIRECT
 DOMAIN-SUFFIX,aliyun.com,DIRECT
 DOMAIN-SUFFIX,aliyuncs.com,DIRECT
+DOMAIN-SUFFIX,alphassl.com,DIRECT
 DOMAIN-SUFFIX,amap.com,DIRECT
 DOMAIN-SUFFIX,amd.com,DIRECT
 DOMAIN-SUFFIX,amemv.com,DIRECT
@@ -8871,9 +8872,9 @@ DOMAIN-SUFFIX,bilibili.com,DIRECT
 DOMAIN-SUFFIX,bilibili.tv,DIRECT
 DOMAIN-SUFFIX,biligame.com,DIRECT
 DOMAIN-SUFFIX,biligame.net,DIRECT
+DOMAIN-SUFFIX,biliimg.com,DIRECT
 DOMAIN-SUFFIX,bilivideo.com,DIRECT
 DOMAIN-SUFFIX,bilivideo.net,DIRECT
-DOMAIN-SUFFIX,bing.com,DIRECT
 DOMAIN-SUFFIX,bitauto.com,DIRECT
 DOMAIN-SUFFIX,bjango.com,DIRECT
 DOMAIN-SUFFIX,bjcathay.com,DIRECT
@@ -8887,6 +8888,7 @@ DOMAIN-SUFFIX,bosszhipin.com,DIRECT
 DOMAIN-SUFFIX,broadcasthe.net,DIRECT
 DOMAIN-SUFFIX,bstatic.com,DIRECT
 DOMAIN-SUFFIX,bwhstatus.com,DIRECT
+DOMAIN-SUFFIX,bytefcdnrd.com,DIRECT
 DOMAIN-SUFFIX,c7sky.com,DIRECT
 DOMAIN-SUFFIX,cailianpress.com,DIRECT
 DOMAIN-SUFFIX,cainiao.com,DIRECT
@@ -8979,6 +8981,7 @@ DOMAIN-SUFFIX,duolabao.com,DIRECT
 DOMAIN-SUFFIX,duowan.com,DIRECT
 DOMAIN-SUFFIX,dxycdn.com,DIRECT
 DOMAIN-SUFFIX,dytt8.net,DIRECT
+DOMAIN-SUFFIX,dz11.com,DIRECT
 DOMAIN-SUFFIX,easebar.com,DIRECT
 DOMAIN-SUFFIX,eastday.com,DIRECT
 DOMAIN-SUFFIX,eastmoney.com,DIRECT
@@ -9026,6 +9029,7 @@ DOMAIN-SUFFIX,getui.com,DIRECT
 DOMAIN-SUFFIX,gifhome.com,DIRECT
 DOMAIN-SUFFIX,gifshow.com,DIRECT
 DOMAIN-SUFFIX,gitv.tv,DIRECT
+DOMAIN-SUFFIX,globalsign.com,DIRECT
 DOMAIN-SUFFIX,godic.net,DIRECT
 DOMAIN-SUFFIX,gratisography.com,DIRECT
 DOMAIN-SUFFIX,greenxf.com,DIRECT
@@ -9150,8 +9154,21 @@ DOMAIN-SUFFIX,kuaishou.com,DIRECT
 DOMAIN-SUFFIX,kugou.com,DIRECT
 DOMAIN-SUFFIX,kuyunbo.club,DIRECT
 DOMAIN-SUFFIX,lanhuapp.com,DIRECT
+DOMAIN-SUFFIX,lanosso.com,DIRECT
+DOMAIN-SUFFIX,lanzog.com,DIRECT
+DOMAIN-SUFFIX,lanzoua.com,DIRECT
 DOMAIN-SUFFIX,lanzoub.com,DIRECT
+DOMAIN-SUFFIX,lanzouc.com,DIRECT
+DOMAIN-SUFFIX,lanzoud.com,DIRECT
+DOMAIN-SUFFIX,lanzoue.com,DIRECT
+DOMAIN-SUFFIX,lanzouf.com,DIRECT
 DOMAIN-SUFFIX,lanzoug.com,DIRECT
+DOMAIN-SUFFIX,lanzoul.com,DIRECT
+DOMAIN-SUFFIX,lanzoum.com,DIRECT
+DOMAIN-SUFFIX,lanzoun.com,DIRECT
+DOMAIN-SUFFIX,lanzouo.com,DIRECT
+DOMAIN-SUFFIX,lanzoup.com,DIRECT
+DOMAIN-SUFFIX,lanzouq.com,DIRECT
 DOMAIN-SUFFIX,laozuo.org,DIRECT
 DOMAIN-SUFFIX,laravel-admin.org,DIRECT
 DOMAIN-SUFFIX,lastpass.com,DIRECT
@@ -9461,6 +9478,7 @@ DOMAIN-SUFFIX,windowsupdate.com,DIRECT
 DOMAIN-SUFFIX,wkzf.com,DIRECT
 DOMAIN-SUFFIX,woa.com,DIRECT
 DOMAIN-SUFFIX,womai.com,DIRECT
+DOMAIN-SUFFIX,woozooo.com,DIRECT
 DOMAIN-SUFFIX,worldbank.org,DIRECT
 DOMAIN-SUFFIX,worldscientific.com,DIRECT
 DOMAIN-SUFFIX,woshipm.com,DIRECT
@@ -9491,6 +9509,8 @@ DOMAIN-SUFFIX,xywy.com,DIRECT
 DOMAIN-SUFFIX,yandex.com,DIRECT
 DOMAIN-SUFFIX,yandex.ru,DIRECT
 DOMAIN-SUFFIX,yangkeduo.com,DIRECT
+DOMAIN-SUFFIX,yangwangauto.com,DIRECT
+DOMAIN-SUFFIX,yaoguo.com,DIRECT
 DOMAIN-SUFFIX,ybscjp.com,DIRECT
 DOMAIN-SUFFIX,ydstatic.com,DIRECT
 DOMAIN-SUFFIX,yeah.net,DIRECT
