--- a/rules.conf
+++ b/rules.conf
@@ -8888,7 +8888,12 @@ DOMAIN-SUFFIX,bosszhipin.com,DIRECT
 DOMAIN-SUFFIX,broadcasthe.net,DIRECT
 DOMAIN-SUFFIX,bstatic.com,DIRECT
 DOMAIN-SUFFIX,bwhstatus.com,DIRECT
+DOMAIN-SUFFIX,bytedance.com,DIRECT
 DOMAIN-SUFFIX,bytefcdnrd.com,DIRECT
+DOMAIN-SUFFIX,bytegoofy.com,DIRECT
+DOMAIN-SUFFIX,byteimg.com,DIRECT
+DOMAIN-SUFFIX,bytetcc.com,DIRECT
+DOMAIN-SUFFIX,bytetos.com,DIRECT
 DOMAIN-SUFFIX,c7sky.com,DIRECT
 DOMAIN-SUFFIX,cailianpress.com,DIRECT
 DOMAIN-SUFFIX,cainiao.com,DIRECT
@@ -8970,6 +8975,10 @@ DOMAIN-SUFFIX,douban.com,DIRECT
 DOMAIN-SUFFIX,douban.fm,DIRECT
 DOMAIN-SUFFIX,doubanio.com,DIRECT
 DOMAIN-SUFFIX,douyin.com,DIRECT
+DOMAIN-SUFFIX,douyincdn.com,DIRECT
+DOMAIN-SUFFIX,douyinpic.com,DIRECT
+DOMAIN-SUFFIX,douyinstatic.com,DIRECT
+DOMAIN-SUFFIX,douyinvod.com,DIRECT
 DOMAIN-SUFFIX,douyu.com,DIRECT
 DOMAIN-SUFFIX,douyuscdn.com,DIRECT
 DOMAIN-SUFFIX,download.jetbrains.com,DIRECT
@@ -9068,6 +9077,7 @@ DOMAIN-SUFFIX,huxiucdn.com,DIRECT
 DOMAIN-SUFFIX,huya.com,DIRECT
 DOMAIN-SUFFIX,hyext.com,DIRECT
 DOMAIN-SUFFIX,ibaotu.com,DIRECT
+DOMAIN-SUFFIX,ibytedapm.com,DIRECT
 DOMAIN-SUFFIX,icetorrent.org,DIRECT
 DOMAIN-SUFFIX,icevirtuallibrary.com,DIRECT
 DOMAIN-SUFFIX,iciba.com,DIRECT
@@ -9241,6 +9251,7 @@ DOMAIN-SUFFIX,nanrenwo.net,DIRECT
 DOMAIN-SUFFIX,nanyangpt.com,DIRECT
 DOMAIN-SUFFIX,nature.com,DIRECT
 DOMAIN-SUFFIX,ncore.cc,DIRECT
+DOMAIN-SUFFIX,ndcpp.com,DIRECT
 DOMAIN-SUFFIX,netease.com,DIRECT
 DOMAIN-SUFFIX,netease.im,DIRECT
 DOMAIN-SUFFIX,netspeedtestmaster.com,DIRECT
@@ -9547,6 +9558,7 @@ DOMAIN-SUFFIX,zhimg.com,DIRECT
 DOMAIN-SUFFIX,zhipin.com,DIRECT
 DOMAIN-SUFFIX,zhiyoo.com,DIRECT
 DOMAIN-SUFFIX,zhuihd.com,DIRECT
+DOMAIN-SUFFIX,zijieapi.com,DIRECT
 DOMAIN-SUFFIX,zimuzu.io,DIRECT
 DOMAIN-SUFFIX,zimuzu.tv,DIRECT
 DOMAIN-SUFFIX,zmz2019.com,DIRECT
