--- a/rules.conf
+++ b/rules.conf
@@ -380,6 +380,7 @@ DOMAIN-SUFFIX,igamecj.com,DIRECT
 DOMAIN-SUFFIX,iguoguo.net,DIRECT
 DOMAIN-SUFFIX,ikanfan.com,DIRECT
 DOMAIN-SUFFIX,imf.org,DIRECT
+DOMAIN-SUFFIX,img16888.com,DIRECT
 DOMAIN-SUFFIX,imgcdc.com,DIRECT
 DOMAIN-SUFFIX,imgix.net,DIRECT
 DOMAIN-SUFFIX,imooc.com,DIRECT
@@ -441,6 +442,7 @@ DOMAIN-SUFFIX,kkmh.com,DIRECT
 DOMAIN-SUFFIX,koowo.com,DIRECT
 DOMAIN-SUFFIX,ks-cdn.com,DIRECT
 DOMAIN-SUFFIX,ksosoft.com,DIRECT
+DOMAIN-SUFFIX,ksyungslb.com,DIRECT
 DOMAIN-SUFFIX,kuaidi100.com,DIRECT
 DOMAIN-SUFFIX,kuaishou.com,DIRECT
 DOMAIN-SUFFIX,kugou.com,DIRECT
@@ -681,6 +683,7 @@ DOMAIN-SUFFIX,steamstat.us,DIRECT
 DOMAIN-SUFFIX,steamstatic.com,DIRECT
 DOMAIN-SUFFIX,steamusercontent.com,DIRECT
 DOMAIN-SUFFIX,suning.com,DIRECT
+DOMAIN-SUFFIX,supercachenet.com,DIRECT
 DOMAIN-SUFFIX,szbdyd.com,DIRECT
 DOMAIN-SUFFIX,takungpao.com,DIRECT
 DOMAIN-SUFFIX,talkingdata.com,DIRECT
