--- a/rules.conf
+++ b/rules.conf
@@ -175,10 +175,13 @@ DOMAIN-SUFFIX,bosszhipin.com,DIRECT
 DOMAIN-SUFFIX,broadcasthe.net,DIRECT
 DOMAIN-SUFFIX,bstatic.com,DIRECT
 DOMAIN-SUFFIX,bwhstatus.com,DIRECT
+DOMAIN-SUFFIX,byted-static.com,DIRECT
 DOMAIN-SUFFIX,bytedance.com,DIRECT
+DOMAIN-SUFFIX,bytednsdoc.com,DIRECT
 DOMAIN-SUFFIX,bytefcdnrd.com,DIRECT
 DOMAIN-SUFFIX,bytegoofy.com,DIRECT
 DOMAIN-SUFFIX,byteimg.com,DIRECT
+DOMAIN-SUFFIX,bytescm.com,DIRECT
 DOMAIN-SUFFIX,bytetcc.com,DIRECT
 DOMAIN-SUFFIX,bytetos.com,DIRECT
 DOMAIN-SUFFIX,c7sky.com,DIRECT
