--- a/rules.conf
+++ b/rules.conf
@@ -31,6 +31,7 @@ DOMAIN-SUFFIX,115.com,DIRECT
 DOMAIN-SUFFIX,126.com,DIRECT
 DOMAIN-SUFFIX,126.net,DIRECT
 DOMAIN-SUFFIX,127.net,DIRECT
+DOMAIN-SUFFIX,139.com,DIRECT
 DOMAIN-SUFFIX,160.com,DIRECT
 DOMAIN-SUFFIX,163.com,DIRECT
 DOMAIN-SUFFIX,163yun.com,DIRECT
