--- a/rules.conf
+++ b/rules.conf
@@ -38,6 +38,7 @@ DOMAIN-SUFFIX,163yun.com,DIRECT
 DOMAIN-SUFFIX,1688.com,DIRECT
 DOMAIN-SUFFIX,17173.com,DIRECT
 DOMAIN-SUFFIX,178.com,DIRECT
+DOMAIN-SUFFIX,188188.org,DIRECT
 DOMAIN-SUFFIX,1ppt.com,DIRECT
 DOMAIN-SUFFIX,1ting.com,DIRECT
 DOMAIN-SUFFIX,21cn.com,DIRECT
@@ -50,6 +51,7 @@ DOMAIN-SUFFIX,343480.com,DIRECT
 DOMAIN-SUFFIX,360buyimg.com,DIRECT
 DOMAIN-SUFFIX,360doc.com,DIRECT
 DOMAIN-SUFFIX,360in.com,DIRECT
+DOMAIN-SUFFIX,365icl.com,DIRECT
 DOMAIN-SUFFIX,36kr.com,DIRECT
 DOMAIN-SUFFIX,39.net,DIRECT
 DOMAIN-SUFFIX,3dmgame.com,DIRECT
@@ -58,6 +60,7 @@ DOMAIN-SUFFIX,51.la,DIRECT
 DOMAIN-SUFFIX,51cto.com,DIRECT
 DOMAIN-SUFFIX,51epei.com,DIRECT
 DOMAIN-SUFFIX,51test.net,DIRECT
+DOMAIN-SUFFIX,51wnl.com,DIRECT
 DOMAIN-SUFFIX,51wnl-cq.com,DIRECT
 DOMAIN-SUFFIX,51ym.me,DIRECT
 DOMAIN-SUFFIX,56.com,DIRECT
@@ -152,6 +155,7 @@ DOMAIN-SUFFIX,bcebos.com,DIRECT
 DOMAIN-SUFFIX,bdatu.com,DIRECT
 DOMAIN-SUFFIX,bdimg.com,DIRECT
 DOMAIN-SUFFIX,bdstatic.com,DIRECT
+DOMAIN-SUFFIX,bdxiguastatic.com,DIRECT
 DOMAIN-SUFFIX,beitaichufang.com,DIRECT
 DOMAIN-SUFFIX,bejson.com,DIRECT
 DOMAIN-SUFFIX,bidchance.com,DIRECT
@@ -178,6 +182,7 @@ DOMAIN-SUFFIX,bstatic.com,DIRECT
 DOMAIN-SUFFIX,bwhstatus.com,DIRECT
 DOMAIN-SUFFIX,byted-static.com,DIRECT
 DOMAIN-SUFFIX,bytedance.com,DIRECT
+DOMAIN-SUFFIX,bytedanceapi.com,DIRECT
 DOMAIN-SUFFIX,bytednsdoc.com,DIRECT
 DOMAIN-SUFFIX,bytefcdnrd.com,DIRECT
 DOMAIN-SUFFIX,bytegoofy.com,DIRECT
@@ -197,6 +202,7 @@ DOMAIN-SUFFIX,ccgslb.com,DIRECT
 DOMAIN-SUFFIX,ccgslb.net,DIRECT
 DOMAIN-SUFFIX,cctv.com,DIRECT
 DOMAIN-SUFFIX,cctvpic.com,DIRECT
+DOMAIN-SUFFIX,cdn.angruo.com,DIRECT
 DOMAIN-SUFFIX,cdntips.net,DIRECT
 DOMAIN-SUFFIX,ceair.com,DIRECT
 DOMAIN-SUFFIX,cgtn.com,DIRECT
@@ -246,6 +252,9 @@ DOMAIN-SUFFIX,damengxiang.me,DIRECT
 DOMAIN-SUFFIX,dandanzan.com,DIRECT
 DOMAIN-SUFFIX,dangdang.com,DIRECT
 DOMAIN-SUFFIX,daojia.com,DIRECT
+DOMAIN-SUFFIX,dcarimg.com,DIRECT
+DOMAIN-SUFFIX,dcarstatic.com,DIRECT
+DOMAIN-SUFFIX,dcarvod.com,DIRECT
 DOMAIN-SUFFIX,dcloud.io,DIRECT
 DOMAIN-SUFFIX,dd-advisor.com,DIRECT
 DOMAIN-SUFFIX,ddrk.me,DIRECT
@@ -261,6 +270,7 @@ DOMAIN-SUFFIX,dns.pub,DIRECT
 DOMAIN-SUFFIX,doc88.com,DIRECT
 DOMAIN-SUFFIX,docschina.org,DIRECT
 DOMAIN-SUFFIX,doh.pub,DIRECT
+DOMAIN-SUFFIX,dongchedi.com,DIRECT
 DOMAIN-SUFFIX,dongqiudi.com,DIRECT
 DOMAIN-SUFFIX,douban.com,DIRECT
 DOMAIN-SUFFIX,douban.fm,DIRECT
@@ -355,7 +365,9 @@ DOMAIN-SUFFIX,hitv.com,DIRECT
 DOMAIN-SUFFIX,hnair.com,DIRECT
 DOMAIN-SUFFIX,hongxiu.com,DIRECT
 DOMAIN-SUFFIX,hostbuf.com,DIRECT
+DOMAIN-SUFFIX,httpcn.com,DIRECT
 DOMAIN-SUFFIX,huaban.com,DIRECT
+DOMAIN-SUFFIX,huangli.com,DIRECT
 DOMAIN-SUFFIX,huashu-inc.com,DIRECT
 DOMAIN-SUFFIX,huawei.com,DIRECT
 DOMAIN-SUFFIX,huaweicloud.com,DIRECT
@@ -678,7 +690,6 @@ DOMAIN-SUFFIX,sspai.com,DIRECT
 DOMAIN-SUFFIX,ssports.com,DIRECT
 DOMAIN-SUFFIX,staticdn.net,DIRECT
 DOMAIN-SUFFIX,staticfile.org,DIRECT
-DOMAIN-SUFFIX,steamcdn-a.akamaihd.net,DIRECT
 DOMAIN-SUFFIX,steam-chat.com,DIRECT
 DOMAIN-SUFFIX,steamcontent.com,DIRECT
 DOMAIN-SUFFIX,steamgames.com,DIRECT
@@ -715,6 +726,8 @@ DOMAIN-SUFFIX,tongdun.net,DIRECT
 DOMAIN-SUFFIX,tool.lu,DIRECT
 DOMAIN-SUFFIX,totheglory.im,DIRECT
 DOMAIN-SUFFIX,toutiao.com,DIRECT
+DOMAIN-SUFFIX,toutiaoimg.com,DIRECT
+DOMAIN-SUFFIX,toutiaostatic.com,DIRECT
 DOMAIN-SUFFIX,ttkdex.com,DIRECT
 DOMAIN-SUFFIX,tuchong.com,DIRECT
 DOMAIN-SUFFIX,tudou.com,DIRECT
@@ -848,6 +861,7 @@ DOMAIN-SUFFIX,zhuihd.com,DIRECT
 DOMAIN-SUFFIX,zijieapi.com,DIRECT
 DOMAIN-SUFFIX,zimuzu.io,DIRECT
 DOMAIN-SUFFIX,zimuzu.tv,DIRECT
+DOMAIN-SUFFIX,zjcdn.com,DIRECT
 DOMAIN-SUFFIX,zmz2019.com,DIRECT
 DOMAIN-SUFFIX,zmzapi.com,DIRECT
 DOMAIN-SUFFIX,zmzapi.net,DIRECT
