--- a/rules.conf
+++ b/rules.conf
@@ -151,6 +151,7 @@ DOMAIN-SUFFIX,bankofchina.com,DIRECT
 DOMAIN-SUFFIX,baomihua.com,DIRECT
 DOMAIN-SUFFIX,battle.net,DIRECT
 DOMAIN-SUFFIX,bazhuayu.com,DIRECT
+DOMAIN-SUFFIX,bazi.chat,DIRECT
 DOMAIN-SUFFIX,bcebos.com,DIRECT
 DOMAIN-SUFFIX,bdatu.com,DIRECT
 DOMAIN-SUFFIX,bdimg.com,DIRECT
@@ -222,6 +223,7 @@ DOMAIN-SUFFIX,chunyu.mobi,DIRECT
 DOMAIN-SUFFIX,chushou.tv,DIRECT
 DOMAIN-SUFFIX,cibntv.net,DIRECT
 DOMAIN-SUFFIX,citicbank.com,DIRECT
+DOMAIN-SUFFIX,ci-du.com,DIRECT
 DOMAIN-SUFFIX,clarivate.com,DIRECT
 DOMAIN-SUFFIX,classix-unlimited.co.uk,DIRECT
 DOMAIN-SUFFIX,clewm.net,DIRECT
@@ -438,6 +440,7 @@ DOMAIN-SUFFIX,jiathis.com,DIRECT
 DOMAIN-SUFFIX,jiayuan.com,DIRECT
 DOMAIN-SUFFIX,jidian.im,DIRECT
 DOMAIN-SUFFIX,jingxi.com,DIRECT
+DOMAIN-SUFFIX,jinmingxuan.com,DIRECT
 DOMAIN-SUFFIX,jiyoujia.com,DIRECT
 DOMAIN-SUFFIX,jkcsjd.com,DIRECT
 DOMAIN-SUFFIX,jomodns.com,DIRECT
@@ -463,6 +466,7 @@ DOMAIN-SUFFIX,kuaidi100.com,DIRECT
 DOMAIN-SUFFIX,kuaishou.com,DIRECT
 DOMAIN-SUFFIX,kugou.com,DIRECT
 DOMAIN-SUFFIX,kuyunbo.club,DIRECT
+DOMAIN-SUFFIX,kvov.com,DIRECT
 DOMAIN-SUFFIX,lanhuapp.com,DIRECT
 DOMAIN-SUFFIX,lanosso.com,DIRECT
 DOMAIN-SUFFIX,lanzog.com,DIRECT
@@ -481,7 +485,6 @@ DOMAIN-SUFFIX,lanzoup.com,DIRECT
 DOMAIN-SUFFIX,lanzouq.com,DIRECT
 DOMAIN-SUFFIX,laozuo.org,DIRECT
 DOMAIN-SUFFIX,laravel-admin.org,DIRECT
-DOMAIN-SUFFIX,lastpass.com,DIRECT
 DOMAIN-SUFFIX,le.com,DIRECT
 DOMAIN-SUFFIX,learnku.com,DIRECT
 DOMAIN-SUFFIX,leyunge.com,DIRECT
@@ -562,7 +565,6 @@ DOMAIN-SUFFIX,oecd-ilibrary.org,DIRECT
 DOMAIN-SUFFIX,office365.com,DIRECT
 DOMAIN-SUFFIX,onlinedown.net,DIRECT
 DOMAIN-SUFFIX,open.cd,DIRECT
-DOMAIN-SUFFIX,oracle.com,DIRECT
 DOMAIN-SUFFIX,osapublishing.org,DIRECT
 DOMAIN-SUFFIX,oschina.net,DIRECT
 DOMAIN-SUFFIX,oup.com,DIRECT
@@ -723,6 +725,7 @@ DOMAIN-SUFFIX,tjupt.org,DIRECT
 DOMAIN-SUFFIX,tmall.com,DIRECT
 DOMAIN-SUFFIX,tmall.hk,DIRECT
 DOMAIN-SUFFIX,tongdun.net,DIRECT
+DOMAIN-SUFFIX,tongrentang.com,DIRECT
 DOMAIN-SUFFIX,tool.lu,DIRECT
 DOMAIN-SUFFIX,totheglory.im,DIRECT
 DOMAIN-SUFFIX,toutiao.com,DIRECT
@@ -840,6 +843,7 @@ DOMAIN-SUFFIX,yuewen.com,DIRECT
 DOMAIN-SUFFIX,yundaex.com,DIRECT
 DOMAIN-SUFFIX,yunjiasu-cdn.net,DIRECT
 DOMAIN-SUFFIX,yunpei.com,DIRECT
+DOMAIN-SUFFIX,yunshi99.com,DIRECT
 DOMAIN-SUFFIX,yunxiu.com,DIRECT
 DOMAIN-SUFFIX,yuque.com,DIRECT
 DOMAIN-SUFFIX,yw11.com,DIRECT
