--- a/rules.conf
+++ b/rules.conf
@@ -113,6 +113,7 @@ DOMAIN-SUFFIX,alipcsec.com,DIRECT
 DOMAIN-SUFFIX,alitrip.com,DIRECT
 DOMAIN-SUFFIX,aliyun.com,DIRECT
 DOMAIN-SUFFIX,aliyuncs.com,DIRECT
+DOMAIN-SUFFIX,aliyundrive.com,DIRECT
 DOMAIN-SUFFIX,alphassl.com,DIRECT
 DOMAIN-SUFFIX,amap.com,DIRECT
 DOMAIN-SUFFIX,amd.com,DIRECT
@@ -724,6 +725,7 @@ DOMAIN-SUFFIX,tjjt360.com,DIRECT
 DOMAIN-SUFFIX,tjupt.org,DIRECT
 DOMAIN-SUFFIX,tmall.com,DIRECT
 DOMAIN-SUFFIX,tmall.hk,DIRECT
+DOMAIN-SUFFIX,tmxbk39.com,DIRECT
 DOMAIN-SUFFIX,tongdun.net,DIRECT
 DOMAIN-SUFFIX,tongrentang.com,DIRECT
 DOMAIN-SUFFIX,tool.lu,DIRECT
