--- a/rules.conf
+++ b/rules.conf
@@ -28,6 +28,7 @@ IP-CIDR,149.154.160.0/20,PROXY
 DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
+DOMAIN-SUFFIX,12365auto.com,DIRECT
 DOMAIN-SUFFIX,126.com,DIRECT
 DOMAIN-SUFFIX,126.net,DIRECT
 DOMAIN-SUFFIX,127.net,DIRECT
@@ -42,6 +43,7 @@ DOMAIN-SUFFIX,188188.org,DIRECT
 DOMAIN-SUFFIX,1ppt.com,DIRECT
 DOMAIN-SUFFIX,1ting.com,DIRECT
 DOMAIN-SUFFIX,21cn.com,DIRECT
+DOMAIN-SUFFIX,21jingji.com,DIRECT
 DOMAIN-SUFFIX,300hu.com,DIRECT
 DOMAIN-SUFFIX,32r.com,DIRECT
 DOMAIN-SUFFIX,3322.cc,DIRECT
@@ -94,6 +96,7 @@ DOMAIN-SUFFIX,aicoinstorge.com,DIRECT
 DOMAIN-SUFFIX,aip.org,DIRECT
 DOMAIN-SUFFIX,air-matters.com,DIRECT
 DOMAIN-SUFFIX,air-matters.io,DIRECT
+DOMAIN-SUFFIX,aito.auto,DIRECT
 DOMAIN-SUFFIX,aixifan.com,DIRECT
 DOMAIN-SUFFIX,akadns.net,DIRECT
 DOMAIN-SUFFIX,ali213.net,DIRECT
@@ -131,6 +134,7 @@ DOMAIN-SUFFIX,apple886.com,DIRECT
 DOMAIN-SUFFIX,appsimg.com,DIRECT
 DOMAIN-SUFFIX,appvipshop.com,DIRECT
 DOMAIN-SUFFIX,aps.org,DIRECT
+DOMAIN-SUFFIX,aqsiqauto.com,DIRECT
 DOMAIN-SUFFIX,ascelibrary.org,DIRECT
 DOMAIN-SUFFIX,asklib.com,DIRECT
 DOMAIN-SUFFIX,asm.org,DIRECT
@@ -139,6 +143,7 @@ DOMAIN-SUFFIX,aso100.com,DIRECT
 DOMAIN-SUFFIX,astm.org,DIRECT
 DOMAIN-SUFFIX,atianqi.com,DIRECT
 DOMAIN-SUFFIX,autonavi.com,DIRECT
+DOMAIN-SUFFIX,avatr.com,DIRECT
 DOMAIN-SUFFIX,awesome-hd.me,DIRECT
 DOMAIN-SUFFIX,b612.net,DIRECT
 DOMAIN-SUFFIX,babybus.com,DIRECT
@@ -210,6 +215,8 @@ DOMAIN-SUFFIX,ceair.com,DIRECT
 DOMAIN-SUFFIX,cgtn.com,DIRECT
 DOMAIN-SUFFIX,chdbits.co,DIRECT
 DOMAIN-SUFFIX,che168.com,DIRECT
+DOMAIN-SUFFIX,chebiao.net,DIRECT
+DOMAIN-SUFFIX,chepx.com,DIRECT
 DOMAIN-SUFFIX,china.com,DIRECT
 DOMAIN-SUFFIX,chinadsl.net,DIRECT
 DOMAIN-SUFFIX,chinanetcenter.com,DIRECT
@@ -301,6 +308,7 @@ DOMAIN-SUFFIX,ebscohost.com,DIRECT
 DOMAIN-SUFFIX,ecitic.com,DIRECT
 DOMAIN-SUFFIX,edgesrv.com,DIRECT
 DOMAIN-SUFFIX,effirst.com,DIRECT
+DOMAIN-SUFFIX,ehaier.com,DIRECT
 DOMAIN-SUFFIX,ele.me,DIRECT
 DOMAIN-SUFFIX,elemecdn.com,DIRECT
 DOMAIN-SUFFIX,emerald.com,DIRECT
@@ -310,9 +318,11 @@ DOMAIN-SUFFIX,epubee.com,DIRECT
 DOMAIN-SUFFIX,etao.com,DIRECT
 DOMAIN-SUFFIX,etoote.com,DIRECT
 DOMAIN-SUFFIX,eudic.net,DIRECT
+DOMAIN-SUFFIX,exeedcars.com,DIRECT
 DOMAIN-SUFFIX,fadada.com,DIRECT
 DOMAIN-SUFFIX,fancyapi.com,DIRECT
 DOMAIN-SUFFIX,fang.com,DIRECT
+DOMAIN-SUFFIX,fangchengbao.com,DIRECT
 DOMAIN-SUFFIX,fangdd.com,DIRECT
 DOMAIN-SUFFIX,fanli.com,DIRECT
 DOMAIN-SUFFIX,fanlibang.com,DIRECT
@@ -326,6 +336,7 @@ DOMAIN-SUFFIX,fliggy.com,DIRECT
 DOMAIN-SUFFIX,frdic.com,DIRECT
 DOMAIN-SUFFIX,futu5.com,DIRECT
 DOMAIN-SUFFIX,futunn.com,DIRECT
+DOMAIN-SUFFIX,galaxy-geely.com,DIRECT
 DOMAIN-SUFFIX,gamersky.com,DIRECT
 DOMAIN-SUFFIX,gandi.net,DIRECT
 DOMAIN-SUFFIX,ganji.com,DIRECT
@@ -333,8 +344,10 @@ DOMAIN-SUFFIX,ganjistatic1.com,DIRECT
 DOMAIN-SUFFIX,gaodun.com,DIRECT
 DOMAIN-SUFFIX,gazellegames.net,DIRECT
 DOMAIN-SUFFIX,gcorelabs.com,DIRECT
+DOMAIN-SUFFIX,geely.com,DIRECT
 DOMAIN-SUFFIX,geetest.com,DIRECT
 DOMAIN-SUFFIX,geilicdn.com,DIRECT
+DOMAIN-SUFFIX,geometryauto.com,DIRECT
 DOMAIN-SUFFIX,getpricetag.com,DIRECT
 DOMAIN-SUFFIX,getui.com,DIRECT
 DOMAIN-SUFFIX,gifhome.com,DIRECT
@@ -364,10 +377,12 @@ DOMAIN-SUFFIX,heikeyun.net,DIRECT
 DOMAIN-SUFFIX,hellorf.com,DIRECT
 DOMAIN-SUFFIX,hexun.com,DIRECT
 DOMAIN-SUFFIX,hicloud.com,DIRECT
+DOMAIN-SUFFIX,hima.auto,DIRECT
 DOMAIN-SUFFIX,hitv.com,DIRECT
 DOMAIN-SUFFIX,hnair.com,DIRECT
 DOMAIN-SUFFIX,hongxiu.com,DIRECT
 DOMAIN-SUFFIX,hostbuf.com,DIRECT
+DOMAIN-SUFFIX,hozonauto.com,DIRECT
 DOMAIN-SUFFIX,httpcn.com,DIRECT
 DOMAIN-SUFFIX,huaban.com,DIRECT
 DOMAIN-SUFFIX,huangli.com,DIRECT
@@ -382,6 +397,7 @@ DOMAIN-SUFFIX,huya.com,DIRECT
 DOMAIN-SUFFIX,hyext.com,DIRECT
 DOMAIN-SUFFIX,ibaotu.com,DIRECT
 DOMAIN-SUFFIX,ibytedapm.com,DIRECT
+DOMAIN-SUFFIX,icarglobal.com,DIRECT
 DOMAIN-SUFFIX,icetorrent.org,DIRECT
 DOMAIN-SUFFIX,icevirtuallibrary.com,DIRECT
 DOMAIN-SUFFIX,iciba.com,DIRECT
@@ -487,6 +503,7 @@ DOMAIN-SUFFIX,lanzouq.com,DIRECT
 DOMAIN-SUFFIX,laozuo.org,DIRECT
 DOMAIN-SUFFIX,laravel-admin.org,DIRECT
 DOMAIN-SUFFIX,le.com,DIRECT
+DOMAIN-SUFFIX,leapmotor.com,DIRECT
 DOMAIN-SUFFIX,learnku.com,DIRECT
 DOMAIN-SUFFIX,leyunge.com,DIRECT
 DOMAIN-SUFFIX,lf127.net,DIRECT
@@ -495,6 +512,7 @@ DOMAIN-SUFFIX,lianjia.com,DIRECT
 DOMAIN-SUFFIX,libguides.com,DIRECT
 DOMAIN-SUFFIX,liepin.com,DIRECT
 DOMAIN-SUFFIX,livechina.com,DIRECT
+DOMAIN-SUFFIX,lixiang.com,DIRECT
 DOMAIN-SUFFIX,ljcdn.com,DIRECT
 DOMAIN-SUFFIX,lofter.com,DIRECT
 DOMAIN-SUFFIX,loli.net,DIRECT
@@ -521,6 +539,7 @@ DOMAIN-SUFFIX,meixincdn.com,DIRECT
 DOMAIN-SUFFIX,meizu.com,DIRECT
 DOMAIN-SUFFIX,mgtv.com,DIRECT
 DOMAIN-SUFFIX,mi.com,DIRECT
+DOMAIN-SUFFIX,mianyangauto.com,DIRECT
 DOMAIN-SUFFIX,miaopai.com,DIRECT
 DOMAIN-SUFFIX,microsoft.com,DIRECT
 DOMAIN-SUFFIX,miercn.com,DIRECT
@@ -702,11 +721,13 @@ DOMAIN-SUFFIX,steamstatic.com,DIRECT
 DOMAIN-SUFFIX,steamusercontent.com,DIRECT
 DOMAIN-SUFFIX,suning.com,DIRECT
 DOMAIN-SUFFIX,supercachenet.com,DIRECT
+DOMAIN-SUFFIX,svw-volkswagen.com,DIRECT
 DOMAIN-SUFFIX,szbdyd.com,DIRECT
 DOMAIN-SUFFIX,takungpao.com,DIRECT
 DOMAIN-SUFFIX,talkingdata.com,DIRECT
 DOMAIN-SUFFIX,tandfonline.com,DIRECT
 DOMAIN-SUFFIX,tankeai.com,DIRECT
+DOMAIN-SUFFIX,tanksuv.com,DIRECT
 DOMAIN-SUFFIX,taobao.com,DIRECT
 DOMAIN-SUFFIX,taobaocdn.com,DIRECT
 DOMAIN-SUFFIX,taoche.com,DIRECT
@@ -716,6 +737,7 @@ DOMAIN-SUFFIX,tencent.com,DIRECT
 DOMAIN-SUFFIX,tencent-cloud.com,DIRECT
 DOMAIN-SUFFIX,tencent-cloud.net,DIRECT
 DOMAIN-SUFFIX,tencentcs.com,DIRECT
+DOMAIN-SUFFIX,tengshiauto.com,DIRECT
 DOMAIN-SUFFIX,tenpay.com,DIRECT
 DOMAIN-SUFFIX,test-ipv6.com,DIRECT
 DOMAIN-SUFFIX,tianpeng.com,DIRECT
@@ -752,6 +774,7 @@ DOMAIN-SUFFIX,unsplash.com,DIRECT
 DOMAIN-SUFFIX,uovz.com,DIRECT
 DOMAIN-SUFFIX,uuu9.com,DIRECT
 DOMAIN-SUFFIX,v-56.com,DIRECT
+DOMAIN-SUFFIX,venucia.com,DIRECT
 DOMAIN-SUFFIX,verycd.com,DIRECT
 DOMAIN-SUFFIX,videojj.com,DIRECT
 DOMAIN-SUFFIX,vip.com,DIRECT
@@ -787,6 +810,7 @@ DOMAIN-SUFFIX,weixinsxy.com,DIRECT
 DOMAIN-SUFFIX,weiyun.com,DIRECT
 DOMAIN-SUFFIX,wendangku.net,DIRECT
 DOMAIN-SUFFIX,westlaw.com,DIRECT
+DOMAIN-SUFFIX,wey.com,DIRECT
 DOMAIN-SUFFIX,whatismyip.com,DIRECT
 DOMAIN-SUFFIX,wiley.com,DIRECT
 DOMAIN-SUFFIX,win4000.com,DIRECT
@@ -832,6 +856,7 @@ DOMAIN-SUFFIX,ydstatic.com,DIRECT
 DOMAIN-SUFFIX,yeah.net,DIRECT
 DOMAIN-SUFFIX,yhd.com,DIRECT
 DOMAIN-SUFFIX,yicai.com,DIRECT
+DOMAIN-SUFFIX,yiche.com,DIRECT
 DOMAIN-SUFFIX,yidun.com,DIRECT
 DOMAIN-SUFFIX,yihaocar.com,DIRECT
 DOMAIN-SUFFIX,yinyuetai.com,DIRECT
@@ -839,6 +864,7 @@ DOMAIN-SUFFIX,yixia.com,DIRECT
 DOMAIN-SUFFIX,yiyaojd.com,DIRECT
 DOMAIN-SUFFIX,yizhibo.com,DIRECT
 DOMAIN-SUFFIX,ykimg.com,DIRECT
+DOMAIN-SUFFIX,yoojia.com,DIRECT
 DOMAIN-SUFFIX,youdao.com,DIRECT
 DOMAIN-SUFFIX,youku.com,DIRECT
 DOMAIN-SUFFIX,yuewen.com,DIRECT
@@ -854,6 +880,7 @@ DOMAIN-SUFFIX,yy.com,DIRECT
 DOMAIN-SUFFIX,zbj.com,DIRECT
 DOMAIN-SUFFIX,zbjimg.com,DIRECT
 DOMAIN-SUFFIX,zdic.net,DIRECT
+DOMAIN-SUFFIX,zeekrlife.com,DIRECT
 DOMAIN-SUFFIX,zhangzishi.cc,DIRECT
 DOMAIN-SUFFIX,zhanqi.tv,DIRECT
 DOMAIN-SUFFIX,zhaopin.com,DIRECT
