--- a/rules.conf
+++ b/rules.conf
@@ -565,6 +565,7 @@ DOMAIN-SUFFIX,mxhichina.com,DIRECT
 DOMAIN-SUFFIX,myanonamouse.net,DIRECT
 DOMAIN-SUFFIX,myapp.com,DIRECT
 DOMAIN-SUFFIX,mydrivers.com,DIRECT
+DOMAIN-SUFFIX,myhuaweicloud.com,DIRECT
 DOMAIN-SUFFIX,myilibrary.com,DIRECT
 DOMAIN-SUFFIX,myqcloud.com,DIRECT
 DOMAIN-SUFFIX,myzaker.com,DIRECT
@@ -585,6 +586,7 @@ DOMAIN-SUFFIX,oecd-ilibrary.org,DIRECT
 DOMAIN-SUFFIX,office365.com,DIRECT
 DOMAIN-SUFFIX,onlinedown.net,DIRECT
 DOMAIN-SUFFIX,open.cd,DIRECT
+DOMAIN-SUFFIX,oraev.com,DIRECT
 DOMAIN-SUFFIX,osapublishing.org,DIRECT
 DOMAIN-SUFFIX,oschina.net,DIRECT
 DOMAIN-SUFFIX,oup.com,DIRECT
@@ -788,6 +790,7 @@ DOMAIN-SUFFIX,vmware.com,DIRECT
 DOMAIN-SUFFIX,voidcn.com,DIRECT
 DOMAIN-SUFFIX,volccdn.com,DIRECT
 DOMAIN-SUFFIX,volceapplog.com,DIRECT
+DOMAIN-SUFFIX,volces.com,DIRECT
 DOMAIN-SUFFIX,vpimg2.com,DIRECT
 DOMAIN-SUFFIX,vpimg3.com,DIRECT
 DOMAIN-SUFFIX,vpimg4.com,DIRECT
