--- a/rules.conf
+++ b/rules.conf
@@ -389,6 +389,7 @@ DOMAIN-SUFFIX,huangli.com,DIRECT
 DOMAIN-SUFFIX,huashu-inc.com,DIRECT
 DOMAIN-SUFFIX,huawei.com,DIRECT
 DOMAIN-SUFFIX,huaweicloud.com,DIRECT
+DOMAIN-SUFFIX,huaweistatic.com,DIRECT
 DOMAIN-SUFFIX,hudong.com,DIRECT
 DOMAIN-SUFFIX,huofar.com,DIRECT
 DOMAIN-SUFFIX,hupu.com,DIRECT
