--- a/rules.conf
+++ b/rules.conf
@@ -165,6 +165,7 @@ DOMAIN-SUFFIX,bdstatic.com,DIRECT
 DOMAIN-SUFFIX,bdxiguastatic.com,DIRECT
 DOMAIN-SUFFIX,beitaichufang.com,DIRECT
 DOMAIN-SUFFIX,bejson.com,DIRECT
+DOMAIN-SUFFIX,bendibao.com,DIRECT
 DOMAIN-SUFFIX,bidchance.com,DIRECT
 DOMAIN-SUFFIX,biliapi.com,DIRECT
 DOMAIN-SUFFIX,biliapi.net,DIRECT
@@ -176,9 +177,11 @@ DOMAIN-SUFFIX,biliimg.com,DIRECT
 DOMAIN-SUFFIX,bilivideo.com,DIRECT
 DOMAIN-SUFFIX,bilivideo.net,DIRECT
 DOMAIN-SUFFIX,bitauto.com,DIRECT
+DOMAIN-SUFFIX,bitautoimg.com,DIRECT
 DOMAIN-SUFFIX,bjango.com,DIRECT
 DOMAIN-SUFFIX,bjcathay.com,DIRECT
 DOMAIN-SUFFIX,blizzard.com,DIRECT
+DOMAIN-SUFFIX,bmcx.com,DIRECT
 DOMAIN-SUFFIX,bmj.com,DIRECT
 DOMAIN-SUFFIX,booking.com,DIRECT
 DOMAIN-SUFFIX,bootcdn.net,DIRECT
@@ -187,6 +190,7 @@ DOMAIN-SUFFIX,bosszhipin.com,DIRECT
 DOMAIN-SUFFIX,broadcasthe.net,DIRECT
 DOMAIN-SUFFIX,bstatic.com,DIRECT
 DOMAIN-SUFFIX,bwhstatus.com,DIRECT
+DOMAIN-SUFFIX,byteacctimg.com,DIRECT
 DOMAIN-SUFFIX,byted-static.com,DIRECT
 DOMAIN-SUFFIX,bytedance.com,DIRECT
 DOMAIN-SUFFIX,bytedanceapi.com,DIRECT
@@ -213,6 +217,7 @@ DOMAIN-SUFFIX,cdn.angruo.com,DIRECT
 DOMAIN-SUFFIX,cdntips.net,DIRECT
 DOMAIN-SUFFIX,ceair.com,DIRECT
 DOMAIN-SUFFIX,cgtn.com,DIRECT
+DOMAIN-SUFFIX,chazidian.com,DIRECT
 DOMAIN-SUFFIX,chdbits.co,DIRECT
 DOMAIN-SUFFIX,che168.com,DIRECT
 DOMAIN-SUFFIX,chebiao.net,DIRECT
@@ -221,6 +226,7 @@ DOMAIN-SUFFIX,china.com,DIRECT
 DOMAIN-SUFFIX,chinadsl.net,DIRECT
 DOMAIN-SUFFIX,chinanetcenter.com,DIRECT
 DOMAIN-SUFFIX,chinaso.com,DIRECT
+DOMAIN-SUFFIX,chinasolargard.com,DIRECT
 DOMAIN-SUFFIX,chinaz.com,DIRECT
 DOMAIN-SUFFIX,chinaz.net,DIRECT
 DOMAIN-SUFFIX,chiphell.com,DIRECT
@@ -265,6 +271,7 @@ DOMAIN-SUFFIX,daojia.com,DIRECT
 DOMAIN-SUFFIX,dcarimg.com,DIRECT
 DOMAIN-SUFFIX,dcarstatic.com,DIRECT
 DOMAIN-SUFFIX,dcarvod.com,DIRECT
+DOMAIN-SUFFIX,dcdapp.com,DIRECT
 DOMAIN-SUFFIX,dcloud.io,DIRECT
 DOMAIN-SUFFIX,dd-advisor.com,DIRECT
 DOMAIN-SUFFIX,ddrk.me,DIRECT
@@ -276,6 +283,7 @@ DOMAIN-SUFFIX,didiglobal.com,DIRECT
 DOMAIN-SUFFIX,digitalartery.com.au,DIRECT
 DOMAIN-SUFFIX,dingtalk.com,DIRECT
 DOMAIN-SUFFIX,dingxiang-inc.com,DIRECT
+DOMAIN-SUFFIX,diyifanwen.com,DIRECT
 DOMAIN-SUFFIX,dns.pub,DIRECT
 DOMAIN-SUFFIX,doc88.com,DIRECT
 DOMAIN-SUFFIX,docschina.org,DIRECT
@@ -336,6 +344,7 @@ DOMAIN-SUFFIX,fliggy.com,DIRECT
 DOMAIN-SUFFIX,frdic.com,DIRECT
 DOMAIN-SUFFIX,futu5.com,DIRECT
 DOMAIN-SUFFIX,futunn.com,DIRECT
+DOMAIN-SUFFIX,gacmotor.com,DIRECT
 DOMAIN-SUFFIX,galaxy-geely.com,DIRECT
 DOMAIN-SUFFIX,gamersky.com,DIRECT
 DOMAIN-SUFFIX,gandi.net,DIRECT
@@ -362,6 +371,7 @@ DOMAIN-SUFFIX,growingio.com,DIRECT
 DOMAIN-SUFFIX,gtimg.com,DIRECT
 DOMAIN-SUFFIX,guazi.com,DIRECT
 DOMAIN-SUFFIX,guokr.com,DIRECT
+DOMAIN-SUFFIX,gushici.net,DIRECT
 DOMAIN-SUFFIX,gushiwen.org,DIRECT
 DOMAIN-SUFFIX,haier.com,DIRECT
 DOMAIN-SUFFIX,hanmarketing.com.au,DIRECT
@@ -395,6 +405,7 @@ DOMAIN-SUFFIX,huofar.com,DIRECT
 DOMAIN-SUFFIX,hupu.com,DIRECT
 DOMAIN-SUFFIX,huxiucdn.com,DIRECT
 DOMAIN-SUFFIX,huya.com,DIRECT
+DOMAIN-SUFFIX,hwxnet.com,DIRECT
 DOMAIN-SUFFIX,hyext.com,DIRECT
 DOMAIN-SUFFIX,ibaotu.com,DIRECT
 DOMAIN-SUFFIX,ibytedapm.com,DIRECT
@@ -460,6 +471,7 @@ DOMAIN-SUFFIX,jidian.im,DIRECT
 DOMAIN-SUFFIX,jingxi.com,DIRECT
 DOMAIN-SUFFIX,jinmingxuan.com,DIRECT
 DOMAIN-SUFFIX,jiyoujia.com,DIRECT
+DOMAIN-SUFFIX,jiyue-auto.com,DIRECT
 DOMAIN-SUFFIX,jkcsjd.com,DIRECT
 DOMAIN-SUFFIX,jomodns.com,DIRECT
 DOMAIN-SUFFIX,jpopsuki.eu,DIRECT
@@ -759,6 +771,7 @@ DOMAIN-SUFFIX,toutiao.com,DIRECT
 DOMAIN-SUFFIX,toutiaoimg.com,DIRECT
 DOMAIN-SUFFIX,toutiaostatic.com,DIRECT
 DOMAIN-SUFFIX,ttkdex.com,DIRECT
+DOMAIN-SUFFIX,tuanche.com,DIRECT
 DOMAIN-SUFFIX,tuchong.com,DIRECT
 DOMAIN-SUFFIX,tudou.com,DIRECT
 DOMAIN-SUFFIX,tuniu.com,DIRECT
@@ -777,6 +790,7 @@ DOMAIN-SUFFIX,unsplash.com,DIRECT
 DOMAIN-SUFFIX,uovz.com,DIRECT
 DOMAIN-SUFFIX,uuu9.com,DIRECT
 DOMAIN-SUFFIX,v-56.com,DIRECT
+DOMAIN-SUFFIX,vcr2012.com,DIRECT
 DOMAIN-SUFFIX,venucia.com,DIRECT
 DOMAIN-SUFFIX,verycd.com,DIRECT
 DOMAIN-SUFFIX,videojj.com,DIRECT
@@ -829,7 +843,9 @@ DOMAIN-SUFFIX,worldscientific.com,DIRECT
 DOMAIN-SUFFIX,woshipm.com,DIRECT
 DOMAIN-SUFFIX,wpfavs.com,DIRECT
 DOMAIN-SUFFIX,wscdns.com,DIRECT
+DOMAIN-SUFFIX,xcarimg.com,DIRECT
 DOMAIN-SUFFIX,xcc.cn,DIRECT
+DOMAIN-SUFFIX,xchuxing.com,DIRECT
 DOMAIN-SUFFIX,xdowns.com,DIRECT
 DOMAIN-SUFFIX,xhscdn.com,DIRECT
 DOMAIN-SUFFIX,xiachufang.com,DIRECT
@@ -838,6 +854,7 @@ DOMAIN-SUFFIX,xiami.net,DIRECT
 DOMAIN-SUFFIX,xiaohongshu.com,DIRECT
 DOMAIN-SUFFIX,xiaojukeji.com,DIRECT
 DOMAIN-SUFFIX,xiaomi.com,DIRECT
+DOMAIN-SUFFIX,xiaopeng.com,DIRECT
 DOMAIN-SUFFIX,xiazaiba.com,DIRECT
 DOMAIN-SUFFIX,xiazaizhijia.com,DIRECT
 DOMAIN-SUFFIX,ximalaya.com,DIRECT
@@ -847,6 +864,7 @@ DOMAIN-SUFFIX,xinhuanet.com,DIRECT
 DOMAIN-SUFFIX,xitongzhijia.net,DIRECT
 DOMAIN-SUFFIX,xitu.io,DIRECT
 DOMAIN-SUFFIX,xmcdn.com,DIRECT
+DOMAIN-SUFFIX,xshiqi.com,DIRECT
 DOMAIN-SUFFIX,xuexili.com,DIRECT
 DOMAIN-SUFFIX,xueyuanjun.com,DIRECT
 DOMAIN-SUFFIX,xunlei.com,DIRECT
@@ -894,6 +912,7 @@ DOMAIN-SUFFIX,zhihu.com,DIRECT
 DOMAIN-SUFFIX,zhimg.com,DIRECT
 DOMAIN-SUFFIX,zhipin.com,DIRECT
 DOMAIN-SUFFIX,zhiyoo.com,DIRECT
+DOMAIN-SUFFIX,zhongche.com,DIRECT
 DOMAIN-SUFFIX,zhuihd.com,DIRECT
 DOMAIN-SUFFIX,zijieapi.com,DIRECT
 DOMAIN-SUFFIX,zimuzu.io,DIRECT
