--- a/rules.conf
+++ b/rules.conf
@@ -135,6 +135,7 @@ DOMAIN-SUFFIX,appsimg.com,DIRECT
 DOMAIN-SUFFIX,appvipshop.com,DIRECT
 DOMAIN-SUFFIX,aps.org,DIRECT
 DOMAIN-SUFFIX,aqsiqauto.com,DIRECT
+DOMAIN-SUFFIX,archina.com,DIRECT
 DOMAIN-SUFFIX,ascelibrary.org,DIRECT
 DOMAIN-SUFFIX,asklib.com,DIRECT
 DOMAIN-SUFFIX,asm.org,DIRECT
@@ -293,6 +294,7 @@ DOMAIN-SUFFIX,dongqiudi.com,DIRECT
 DOMAIN-SUFFIX,douban.com,DIRECT
 DOMAIN-SUFFIX,douban.fm,DIRECT
 DOMAIN-SUFFIX,doubanio.com,DIRECT
+DOMAIN-SUFFIX,doubleclick.net,DIRECT
 DOMAIN-SUFFIX,douyin.com,DIRECT
 DOMAIN-SUFFIX,douyincdn.com,DIRECT
 DOMAIN-SUFFIX,douyinpic.com,DIRECT
@@ -318,7 +320,9 @@ DOMAIN-SUFFIX,edgesrv.com,DIRECT
 DOMAIN-SUFFIX,effirst.com,DIRECT
 DOMAIN-SUFFIX,ehaier.com,DIRECT
 DOMAIN-SUFFIX,ele.me,DIRECT
+DOMAIN-SUFFIX,elecfans.com,DIRECT
 DOMAIN-SUFFIX,elemecdn.com,DIRECT
+DOMAIN-SUFFIX,elian360.com,DIRECT
 DOMAIN-SUFFIX,emerald.com,DIRECT
 DOMAIN-SUFFIX,empornium.me,DIRECT
 DOMAIN-SUFFIX,engineeringvillage.com,DIRECT
@@ -368,9 +372,11 @@ DOMAIN-SUFFIX,gratisography.com,DIRECT
 DOMAIN-SUFFIX,greenxf.com,DIRECT
 DOMAIN-SUFFIX,grg-gas.com,DIRECT
 DOMAIN-SUFFIX,growingio.com,DIRECT
+DOMAIN-SUFFIX,gstatic.com,DIRECT
 DOMAIN-SUFFIX,gtimg.com,DIRECT
 DOMAIN-SUFFIX,guazi.com,DIRECT
 DOMAIN-SUFFIX,guokr.com,DIRECT
+DOMAIN-SUFFIX,guoxueziyuan.com,DIRECT
 DOMAIN-SUFFIX,gushici.net,DIRECT
 DOMAIN-SUFFIX,gushiwen.org,DIRECT
 DOMAIN-SUFFIX,haier.com,DIRECT
@@ -430,6 +436,7 @@ DOMAIN-SUFFIX,imf.org,DIRECT
 DOMAIN-SUFFIX,img16888.com,DIRECT
 DOMAIN-SUFFIX,imgcdc.com,DIRECT
 DOMAIN-SUFFIX,imgix.net,DIRECT
+DOMAIN-SUFFIX,immotors.com,DIRECT
 DOMAIN-SUFFIX,imooc.com,DIRECT
 DOMAIN-SUFFIX,infinitynewtab.com,DIRECT
 DOMAIN-SUFFIX,infoq.com,DIRECT
@@ -438,6 +445,7 @@ DOMAIN-SUFFIX,ip.la,DIRECT
 DOMAIN-SUFFIX,ip138.com,DIRECT
 DOMAIN-SUFFIX,ip-cdn.com,DIRECT
 DOMAIN-SUFFIX,ipip.net,DIRECT
+DOMAIN-SUFFIX,ipleak.net,DIRECT
 DOMAIN-SUFFIX,ipv6-test.com,DIRECT
 DOMAIN-SUFFIX,iqiyi.com,DIRECT
 DOMAIN-SUFFIX,iqiyipic.com,DIRECT
@@ -499,6 +507,7 @@ DOMAIN-SUFFIX,kuyunbo.club,DIRECT
 DOMAIN-SUFFIX,kvov.com,DIRECT
 DOMAIN-SUFFIX,lanhuapp.com,DIRECT
 DOMAIN-SUFFIX,lanosso.com,DIRECT
+DOMAIN-SUFFIX,lanrar.com,DIRECT
 DOMAIN-SUFFIX,lanzog.com,DIRECT
 DOMAIN-SUFFIX,lanzoua.com,DIRECT
 DOMAIN-SUFFIX,lanzoub.com,DIRECT
@@ -554,7 +563,6 @@ DOMAIN-SUFFIX,mgtv.com,DIRECT
 DOMAIN-SUFFIX,mi.com,DIRECT
 DOMAIN-SUFFIX,mianyangauto.com,DIRECT
 DOMAIN-SUFFIX,miaopai.com,DIRECT
-DOMAIN-SUFFIX,microsoft.com,DIRECT
 DOMAIN-SUFFIX,miercn.com,DIRECT
 DOMAIN-SUFFIX,mi-img.com,DIRECT
 DOMAIN-SUFFIX,minapp.com,DIRECT
@@ -593,6 +601,7 @@ DOMAIN-SUFFIX,netease.im,DIRECT
 DOMAIN-SUFFIX,netspeedtestmaster.com,DIRECT
 DOMAIN-SUFFIX,ngacn.cc,DIRECT
 DOMAIN-SUFFIX,nim-lang-cn.org,DIRECT
+DOMAIN-SUFFIX,nio.com,DIRECT
 DOMAIN-SUFFIX,nuomi.com,DIRECT
 DOMAIN-SUFFIX,nvidia.com,DIRECT
 DOMAIN-SUFFIX,oecd-ilibrary.org,DIRECT
@@ -669,6 +678,7 @@ DOMAIN-SUFFIX,recaptcha.net,DIRECT
 DOMAIN-SUFFIX,redacted.ch,DIRECT
 DOMAIN-SUFFIX,renren.com,DIRECT
 DOMAIN-SUFFIX,rfchost.com,DIRECT
+DOMAIN-SUFFIX,risingauto.com,DIRECT
 DOMAIN-SUFFIX,ronghub.com,DIRECT
 DOMAIN-SUFFIX,router.asus.com,DIRECT
 DOMAIN-SUFFIX,rsc.org,DIRECT
@@ -738,6 +748,7 @@ DOMAIN-SUFFIX,suning.com,DIRECT
 DOMAIN-SUFFIX,supercachenet.com,DIRECT
 DOMAIN-SUFFIX,svw-volkswagen.com,DIRECT
 DOMAIN-SUFFIX,szbdyd.com,DIRECT
+DOMAIN-SUFFIX,taijizhidian.com,DIRECT
 DOMAIN-SUFFIX,takungpao.com,DIRECT
 DOMAIN-SUFFIX,talkingdata.com,DIRECT
 DOMAIN-SUFFIX,tandfonline.com,DIRECT
@@ -799,8 +810,8 @@ DOMAIN-SUFFIX,vipmro.com,DIRECT
 DOMAIN-SUFFIX,vipmro.net,DIRECT
 DOMAIN-SUFFIX,vipstatic.com,DIRECT
 DOMAIN-SUFFIX,visualhunt.com,DIRECT
-DOMAIN-SUFFIX,visualstudio.com,DIRECT
 DOMAIN-SUFFIX,vmall.com,DIRECT
+DOMAIN-SUFFIX,vmallres.com,DIRECT
 DOMAIN-SUFFIX,vmware.com,DIRECT
 DOMAIN-SUFFIX,voidcn.com,DIRECT
 DOMAIN-SUFFIX,volccdn.com,DIRECT
@@ -827,6 +838,7 @@ DOMAIN-SUFFIX,weixinbridge.com,DIRECT
 DOMAIN-SUFFIX,weixinsxy.com,DIRECT
 DOMAIN-SUFFIX,weiyun.com,DIRECT
 DOMAIN-SUFFIX,wendangku.net,DIRECT
+DOMAIN-SUFFIX,weshape3d.com,DIRECT
 DOMAIN-SUFFIX,westlaw.com,DIRECT
 DOMAIN-SUFFIX,wey.com,DIRECT
 DOMAIN-SUFFIX,whatismyip.com,DIRECT
@@ -851,6 +863,7 @@ DOMAIN-SUFFIX,xhscdn.com,DIRECT
 DOMAIN-SUFFIX,xiachufang.com,DIRECT
 DOMAIN-SUFFIX,xiami.com,DIRECT
 DOMAIN-SUFFIX,xiami.net,DIRECT
+DOMAIN-SUFFIX,xiancn.com,DIRECT
 DOMAIN-SUFFIX,xiaohongshu.com,DIRECT
 DOMAIN-SUFFIX,xiaojukeji.com,DIRECT
 DOMAIN-SUFFIX,xiaomi.com,DIRECT
@@ -898,6 +911,7 @@ DOMAIN-SUFFIX,yunxiu.com,DIRECT
 DOMAIN-SUFFIX,yuque.com,DIRECT
 DOMAIN-SUFFIX,yw11.com,DIRECT
 DOMAIN-SUFFIX,yximgs.com,DIRECT
+DOMAIN-SUFFIX,yxyfu.com,DIRECT
 DOMAIN-SUFFIX,yy.com,DIRECT
 DOMAIN-SUFFIX,zbj.com,DIRECT
 DOMAIN-SUFFIX,zbjimg.com,DIRECT
