--- a/rules.conf
+++ b/rules.conf
@@ -21,6 +21,7 @@ IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
+IP-CIDR,61.185.220.174,DIRECT
 IP-CIDR,91.108.56.0/22,PROXY
 IP-CIDR,91.108.4.0/22,PROXY
 IP-CIDR,109.239.140.0/24,PROXY
@@ -246,6 +247,7 @@ DOMAIN-SUFFIX,cli.im,DIRECT
 DOMAIN-SUFFIX,clouddn.com,DIRECT
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
 DOMAIN-SUFFIX,cmbimg.com,DIRECT
+DOMAIN-SUFFIX,cmpassport.com,DIRECT
 DOMAIN-SUFFIX,cn,DIRECT
 DOMAIN-SUFFIX,cnblogs.com,DIRECT
 DOMAIN-SUFFIX,cncrk.com,DIRECT
@@ -421,6 +423,7 @@ DOMAIN-SUFFIX,icevirtuallibrary.com,DIRECT
 DOMAIN-SUFFIX,iciba.com,DIRECT
 DOMAIN-SUFFIX,icloud.com.cn,DIRECT
 DOMAIN-SUFFIX,icourse163.org,DIRECT
+DOMAIN-SUFFIX,icpapi.com,DIRECT
 DOMAIN-SUFFIX,idc.wiki,DIRECT
 DOMAIN-SUFFIX,idqqimg.com,DIRECT
 DOMAIN-SUFFIX,ieee.org,DIRECT
@@ -550,6 +553,7 @@ DOMAIN-SUFFIX,manmanbuy.com,DIRECT
 DOMAIN-SUFFIX,maoyan.com,DIRECT
 DOMAIN-SUFFIX,maoyun.tv,DIRECT
 DOMAIN-SUFFIX,me.com,DIRECT
+DOMAIN-SUFFIX,meimingteng.com,DIRECT
 DOMAIN-SUFFIX,meipai.com,DIRECT
 DOMAIN-SUFFIX,meishij.net,DIRECT
 DOMAIN-SUFFIX,meitu.com,DIRECT
@@ -754,6 +758,7 @@ DOMAIN-SUFFIX,talkingdata.com,DIRECT
 DOMAIN-SUFFIX,tandfonline.com,DIRECT
 DOMAIN-SUFFIX,tankeai.com,DIRECT
 DOMAIN-SUFFIX,tanksuv.com,DIRECT
+DOMAIN-SUFFIX,tanx.com,DIRECT
 DOMAIN-SUFFIX,taobao.com,DIRECT
 DOMAIN-SUFFIX,taobaocdn.com,DIRECT
 DOMAIN-SUFFIX,taoche.com,DIRECT
@@ -890,6 +895,7 @@ DOMAIN-SUFFIX,ybscjp.com,DIRECT
 DOMAIN-SUFFIX,ydstatic.com,DIRECT
 DOMAIN-SUFFIX,yeah.net,DIRECT
 DOMAIN-SUFFIX,yhd.com,DIRECT
+DOMAIN-SUFFIX,yi958.com,DIRECT
 DOMAIN-SUFFIX,yicai.com,DIRECT
 DOMAIN-SUFFIX,yiche.com,DIRECT
 DOMAIN-SUFFIX,yidun.com,DIRECT
