--- a/rules.conf
+++ b/rules.conf
@@ -21,7 +21,7 @@ IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
-IP-CIDR,61.185.220.174,DIRECT
+IP-CIDR,61.185.220.174/0,DIRECT
 IP-CIDR,91.108.56.0/22,PROXY
 IP-CIDR,91.108.4.0/22,PROXY
 IP-CIDR,109.239.140.0/24,PROXY
