--- a/rules.conf
+++ b/rules.conf
@@ -15,8 +15,6 @@ dns-direct-fallback-proxy = false
 udp-policy-not-supported-behaviour = REJECT
 
 [Rule]
-USER-AGENT,MicroMessenger*,DIRECT
-USER-AGENT,WeChat*,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
@@ -25,7 +23,9 @@ IP-CIDR,91.108.56.0/22,PROXY
 IP-CIDR,91.108.4.0/22,PROXY
 IP-CIDR,109.239.140.0/24,PROXY
 IP-CIDR,149.154.160.0/20,PROXY
-DOMAIN,61.185.220.174:7316,DIRECT
+GEOIP,CN,DIRECT
+USER-AGENT,MicroMessenger*,DIRECT
+USER-AGENT,WeChat*,DIRECT
 DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
@@ -771,6 +771,8 @@ DOMAIN-SUFFIX,tengshiauto.com,DIRECT
 DOMAIN-SUFFIX,tenpay.com,DIRECT
 DOMAIN-SUFFIX,test-ipv6.com,DIRECT
 DOMAIN-SUFFIX,tianpeng.com,DIRECT
+DOMAIN-SUFFIX,tianqi.com,DIRECT
+DOMAIN-SUFFIX,tianqistatic.com,DIRECT
 DOMAIN-SUFFIX,tianyancha.com,DIRECT
 DOMAIN-SUFFIX,tingyun.com,DIRECT
 DOMAIN-SUFFIX,tjjt360.com,DIRECT
