--- a/rules.conf
+++ b/rules.conf
@@ -259,7 +259,6 @@ DOMAIN-SUFFIX,com-hs-hkdy.com,DIRECT
 DOMAIN-SUFFIX,cowtransfer.com,DIRECT
 DOMAIN-SUFFIX,cq-wnl.com,DIRECT
 DOMAIN-SUFFIX,cr173.com,DIRECT
-DOMAIN-SUFFIX,crashlytics.com,DIRECT
 DOMAIN-SUFFIX,crsky.com,DIRECT
 DOMAIN-SUFFIX,csair.com,DIRECT
 DOMAIN-SUFFIX,csdn.net,DIRECT
@@ -767,6 +766,7 @@ DOMAIN-SUFFIX,tencent.com,DIRECT
 DOMAIN-SUFFIX,tencent-cloud.com,DIRECT
 DOMAIN-SUFFIX,tencent-cloud.net,DIRECT
 DOMAIN-SUFFIX,tencentcs.com,DIRECT
+DOMAIN-SUFFIX,tencentmusic.com,DIRECT
 DOMAIN-SUFFIX,tengshiauto.com,DIRECT
 DOMAIN-SUFFIX,tenpay.com,DIRECT
 DOMAIN-SUFFIX,test-ipv6.com,DIRECT
