--- a/rules.conf
+++ b/rules.conf
@@ -19,11 +19,24 @@ IP-CIDR,192.168.0.0/16,DIRECT,no-resolve
 IP-CIDR,10.0.0.0/8,DIRECT,no-resolve
 IP-CIDR,172.16.0.0/12,DIRECT,no-resolve
 IP-CIDR,127.0.0.0/8,DIRECT,no-resolve
-IP-CIDR,91.108.56.0/22,PROXY,no-resolve
+IP-CIDR,24.199.123.28/32,PROXY,no-resolve
+IP-CIDR,45.76.214.191/32,PROXY,no-resolve
+IP-CIDR,64.23.132.171/32,PROXY,no-resolve
+IP-CIDR,143.198.200.27/32,PROXY,no-resolve
+IP-CIDR,159.89.204.203/32,PROXY,no-resolve
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
+IP-CIDR,91.108.8.0/22,PROXY,no-resolve
+IP-CIDR,91.108.12.0/22,PROXY,no-resolve
+IP-CIDR,91.108.16.0/22,PROXY,no-resolve
+IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.160.0/20,PROXY,no-resolve
+IP-CIDR,2001:B28:F23D::/48,PROXY,no-resolve
+IP-CIDR,2001:B28:F23F::/48,PROXY,no-resolve
+IP-CIDR,2001:67C:4E8::/48,PROXY,no-resolve
 GEOIP,CN,DIRECT,no-resolve
+USER-AGENT,QQ*,DIRECT
+USER-AGENT,TIM*,DIRECT
 USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,WeChat*,DIRECT
 DOMAIN-SUFFIX,10010.com,DIRECT
@@ -948,5 +961,5 @@ FINAL,PROXY
 localhost = 127.0.0.1
 
 [URL Rewrite]
-^https?:\/\/(www\.)?g\.cn https://google.com 302
-^https?:\/\/(www\.)?google\.[-A-Za-z]+ https://google.com 302
+^https?:\/\/(www\.)?g\.cn https://www.google.com 302
+^https?:\/\/(www\.)?google\.[a-z]+ https://www.google.com 302
