--- a/rules.conf
+++ b/rules.conf
@@ -176,6 +176,7 @@ DOMAIN-SUFFIX,bcebos.com,DIRECT
 DOMAIN-SUFFIX,bdatu.com,DIRECT
 DOMAIN-SUFFIX,bdimg.com,DIRECT
 DOMAIN-SUFFIX,bdstatic.com,DIRECT
+DOMAIN-SUFFIX,bdurl.net,DIRECT
 DOMAIN-SUFFIX,bdxiguastatic.com,DIRECT
 DOMAIN-SUFFIX,beitaichufang.com,DIRECT
 DOMAIN-SUFFIX,bejson.com,DIRECT
@@ -209,9 +210,12 @@ DOMAIN-SUFFIX,byted-static.com,DIRECT
 DOMAIN-SUFFIX,bytedance.com,DIRECT
 DOMAIN-SUFFIX,bytedanceapi.com,DIRECT
 DOMAIN-SUFFIX,bytednsdoc.com,DIRECT
+DOMAIN-SUFFIX,byteeffecttos.com,DIRECT
 DOMAIN-SUFFIX,bytefcdnrd.com,DIRECT
+DOMAIN-SUFFIX,bytegecko.com,DIRECT
 DOMAIN-SUFFIX,bytegoofy.com,DIRECT
 DOMAIN-SUFFIX,byteimg.com,DIRECT
+DOMAIN-SUFFIX,bytemaimg.com,DIRECT
 DOMAIN-SUFFIX,bytescm.com,DIRECT
 DOMAIN-SUFFIX,bytetcc.com,DIRECT
 DOMAIN-SUFFIX,bytetos.com,DIRECT
@@ -329,6 +333,7 @@ DOMAIN-SUFFIX,eastday.com,DIRECT
 DOMAIN-SUFFIX,eastmoney.com,DIRECT
 DOMAIN-SUFFIX,ebscohost.com,DIRECT
 DOMAIN-SUFFIX,ecitic.com,DIRECT
+DOMAIN-SUFFIX,ecombdapi.com,DIRECT
 DOMAIN-SUFFIX,edgesrv.com,DIRECT
 DOMAIN-SUFFIX,effirst.com,DIRECT
 DOMAIN-SUFFIX,ehaier.com,DIRECT
@@ -434,6 +439,7 @@ DOMAIN-SUFFIX,iciba.com,DIRECT
 DOMAIN-SUFFIX,icourse163.org,DIRECT
 DOMAIN-SUFFIX,icpapi.com,DIRECT
 DOMAIN-SUFFIX,idc.wiki,DIRECT
+DOMAIN-SUFFIX,idouyinvod.com,DIRECT
 DOMAIN-SUFFIX,idqqimg.com,DIRECT
 DOMAIN-SUFFIX,ieee.org,DIRECT
 DOMAIN-SUFFIX,iesdouyin.com,DIRECT
@@ -700,6 +706,7 @@ DOMAIN-SUFFIX,ruguoapp.com,DIRECT
 DOMAIN-SUFFIX,runoob.com,DIRECT
 DOMAIN-SUFFIX,sagepub.com,DIRECT
 DOMAIN-SUFFIX,sankuai.com,DIRECT
+DOMAIN-SUFFIX,saxysec.com,DIRECT
 DOMAIN-SUFFIX,sc115.com,DIRECT
 DOMAIN-SUFFIX,sciencedirect.com,DIRECT
 DOMAIN-SUFFIX,sciencemag.org,DIRECT
