--- a/rules.conf
+++ b/rules.conf
@@ -334,6 +334,7 @@ DOMAIN-SUFFIX,eastmoney.com,DIRECT
 DOMAIN-SUFFIX,ebscohost.com,DIRECT
 DOMAIN-SUFFIX,ecitic.com,DIRECT
 DOMAIN-SUFFIX,ecombdapi.com,DIRECT
+DOMAIN-SUFFIX,ecombdimg.com,DIRECT
 DOMAIN-SUFFIX,edgesrv.com,DIRECT
 DOMAIN-SUFFIX,effirst.com,DIRECT
 DOMAIN-SUFFIX,ehaier.com,DIRECT
@@ -496,6 +497,7 @@ DOMAIN-SUFFIX,jiayuan.com,DIRECT
 DOMAIN-SUFFIX,jidian.im,DIRECT
 DOMAIN-SUFFIX,jingxi.com,DIRECT
 DOMAIN-SUFFIX,jinmingxuan.com,DIRECT
+DOMAIN-SUFFIX,jinritemai.com,DIRECT
 DOMAIN-SUFFIX,jiyoujia.com,DIRECT
 DOMAIN-SUFFIX,jiyue-auto.com,DIRECT
 DOMAIN-SUFFIX,jkcsjd.com,DIRECT
