--- a/rules.conf
+++ b/rules.conf
@@ -211,6 +211,7 @@ DOMAIN-SUFFIX,bytedance.com,DIRECT
 DOMAIN-SUFFIX,bytedanceapi.com,DIRECT
 DOMAIN-SUFFIX,bytednsdoc.com,DIRECT
 DOMAIN-SUFFIX,byteeffecttos.com,DIRECT
+DOMAIN-SUFFIX,bytefae.com,DIRECT
 DOMAIN-SUFFIX,bytefcdnrd.com,DIRECT
 DOMAIN-SUFFIX,bytegecko.com,DIRECT
 DOMAIN-SUFFIX,bytegoofy.com,DIRECT
@@ -312,6 +313,7 @@ DOMAIN-SUFFIX,douban.com,DIRECT
 DOMAIN-SUFFIX,douban.fm,DIRECT
 DOMAIN-SUFFIX,doubanio.com,DIRECT
 DOMAIN-SUFFIX,doubleclick.net,DIRECT
+DOMAIN-SUFFIX,doupay.com,DIRECT
 DOMAIN-SUFFIX,douyin.com,DIRECT
 DOMAIN-SUFFIX,douyincdn.com,DIRECT
 DOMAIN-SUFFIX,douyinpic.com,DIRECT
@@ -335,6 +337,8 @@ DOMAIN-SUFFIX,ebscohost.com,DIRECT
 DOMAIN-SUFFIX,ecitic.com,DIRECT
 DOMAIN-SUFFIX,ecombdapi.com,DIRECT
 DOMAIN-SUFFIX,ecombdimg.com,DIRECT
+DOMAIN-SUFFIX,ecombdpage.com,DIRECT
+DOMAIN-SUFFIX,ecombdstatic.com,DIRECT
 DOMAIN-SUFFIX,edgesrv.com,DIRECT
 DOMAIN-SUFFIX,effirst.com,DIRECT
 DOMAIN-SUFFIX,ehaier.com,DIRECT
@@ -523,6 +527,7 @@ DOMAIN-SUFFIX,ksyungslb.com,DIRECT
 DOMAIN-SUFFIX,kuaidi100.com,DIRECT
 DOMAIN-SUFFIX,kuaishou.com,DIRECT
 DOMAIN-SUFFIX,kugou.com,DIRECT
+DOMAIN-SUFFIX,kuiniuca.com,DIRECT
 DOMAIN-SUFFIX,kuyunbo.club,DIRECT
 DOMAIN-SUFFIX,kvov.com,DIRECT
 DOMAIN-SUFFIX,lanhuapp.com,DIRECT
@@ -828,6 +833,7 @@ DOMAIN-SUFFIX,uovz.com,DIRECT
 DOMAIN-SUFFIX,uuu9.com,DIRECT
 DOMAIN-SUFFIX,v-56.com,DIRECT
 DOMAIN-SUFFIX,vcr2012.com,DIRECT
+DOMAIN-SUFFIX,vegslb.com,DIRECT
 DOMAIN-SUFFIX,venucia.com,DIRECT
 DOMAIN-SUFFIX,verycd.com,DIRECT
 DOMAIN-SUFFIX,videojj.com,DIRECT
