--- a/rules.conf
+++ b/rules.conf
@@ -2,8 +2,8 @@
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 239.255.255.250/32, 255.255.255.255/32
-dns-server = https://223.5.5.5/dns-query?
-fallback-dns-server = 223.5.5.5
+dns-server = 223.5.5.5
+fallback-dns-server = 223.6.6.6
 ipv6 = false
 prefer-ipv6 = false
 dns-fallback-system = false
@@ -506,6 +506,7 @@ DOMAIN-SUFFIX,jiyoujia.com,DIRECT
 DOMAIN-SUFFIX,jiyue-auto.com,DIRECT
 DOMAIN-SUFFIX,jkcsjd.com,DIRECT
 DOMAIN-SUFFIX,jomodns.com,DIRECT
+DOMAIN-SUFFIX,jomoxc.com,DIRECT
 DOMAIN-SUFFIX,jpopsuki.eu,DIRECT
 DOMAIN-SUFFIX,jstor.org,DIRECT
 DOMAIN-SUFFIX,jstucdn.com,DIRECT
