--- a/rules.conf
+++ b/rules.conf
@@ -206,6 +206,7 @@ DOMAIN-SUFFIX,bstatic.com,DIRECT
 DOMAIN-SUFFIX,bwhstatus.com,DIRECT
 DOMAIN-SUFFIX,byteacctimg.com,DIRECT
 DOMAIN-SUFFIX,byted-static.com,DIRECT
+DOMAIN-SUFFIX,byted-ug.com,DIRECT
 DOMAIN-SUFFIX,bytedance.com,DIRECT
 DOMAIN-SUFFIX,bytedanceapi.com,DIRECT
 DOMAIN-SUFFIX,bytednsdoc.com,DIRECT
@@ -687,6 +688,7 @@ DOMAIN-SUFFIX,qingzhouip.com,DIRECT
 DOMAIN-SUFFIX,qiniu.com,DIRECT
 DOMAIN-SUFFIX,qiniu.io,DIRECT
 DOMAIN-SUFFIX,qiniuapi.com,DIRECT
+DOMAIN-SUFFIX,qiniucdn.com,DIRECT
 DOMAIN-SUFFIX,qiniudns.com,DIRECT
 DOMAIN-SUFFIX,qiushibaike.com,DIRECT
 DOMAIN-SUFFIX,qiuziti.com,DIRECT
